# FDTD

./: README.md
FDTD_F90/: CMakeLists.txt  LinuxRun  Plot.m  PlotMovie.m  WindowsRun.bat
FDTD_F90/doc/: Schedule.txt
FDTD_F90/gui/: Gui.java  GuiMain.java
FDTD_F90/src/: CPML.f90  FDTD.f90  FDTD_Constants.f90  Grid.f90  PrintField.f90  TFSF.f90  main.f90
FDTD_F90/src/Documentation/html/: dir_68267d1309a1af8e8297ef4c3efbcdba.html  index.html  namespacefdtd.html  namespacefdtd__constants.html  namespacefieldcoefficients.html  namespacemembers.html  namespacemembers_func.html  namespacemembers_vars.html  namespaceprintfield.html  namespaces.html  namespacetfsf.html
FDTD_F90/src/Documentation/html/search/: all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  functions_0.js  functions_2.js  namespaces_1.js  namespaces_2.js  searchdata.js  variables_0.js
FDTD_F90/src/Documentation/latex/: dir_68267d1309a1af8e8297ef4c3efbcdba.tex  namespacefdtd.tex  namespacefdtd__constants.tex  namespacefieldcoefficients.tex  namespaceprintfield.tex  namespaces.tex  namespacetfsf.tex  refman.aux  refman.idx  refman.tex  refman.toc
MetamaterialFDTD/: .gitignore  README.md
MetamaterialFDTD/C++/: CMakeLists.txt  Doxyfile  Plot.p  setParameters
MetamaterialFDTD/C++/include/: constants.h  error.h  field.h  grid.h  pml.h  process.h  source.h  update.h
MetamaterialFDTD/C++/src/: main.cpp
MetamaterialFDTD/C++/src/Error/: CMakeLists.txt  error.cpp
MetamaterialFDTD/C++/src/PML/: CMakeLists.txt  initialize.cpp
MetamaterialFDTD/C++/src/Process/: CMakeLists.txt  postprocess.cpp  preprocess.cpp
MetamaterialFDTD/C++/src/Source/: CMakeLists.txt  hardSource.cpp  tfsf.cpp
MetamaterialFDTD/C++/src/Update/: CMakeLists.txt  ChebyDerivative.cpp  calcCurl.cpp  updateE.cpp  updateH.cpp
MetamaterialFDTD/Matlab/: ChebyTest.m  FDTD.m  applyBC_E.m  applyBC_H.m  applySrc_E.m  applySrc_H.m  updateE.m  updateH.m
UPML_PSTD/: .gitignore  CMakeLists.txt  Plot.m  Plot.p  README.md  run
UPML_PSTD/src/: FFTW_utils.f90  Grid.f90  MPI_utils.f90  Parameters.f90  PrintField.f90  UPML.f90  Update.f90  main.f90
WaveEquation/: .gitignore  Plot.m  README.md  run
WaveEquation/doc/: Doxyfile
WaveEquation/gpu/: CudaWave.cu
(+33 files in other folders)
